# MapsPathfinding

./: .gitignore  Cargo.toml  data.xml  data2.xml  data3.xml  package-lock.json
scripts/: importMapsAPI.js
src/: main.rs
src/controller/: serve.rs
src/model/: mod.rs  pathfinding.rs  util.rs
src/model/structs/: graph.rs  mod.rs  node.rs  point.rs
src/scripts/: importMapsAPI.js  map.js
src/view/static/: output.css
src/view/static/errors/: 400.html
src/view/templates/: index.html  test.html
