[package]
name = "MapsWebsite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minidom = "0.15.2"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = "1.0.201"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
