[package]
name = "MapsWebsite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minidom = "0.15.2"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
actix-web = "4.4.0"
actix-files = "0.6.2"
actix-web-lab = "0.20.0"
env_logger = "0.8"
log = "^0.4"
tera = "1.19.1"
